fix chart on mobile

--- a/src/css/player.css
+++ b/src/css/player.css
@@ -11,7 +11,7 @@
 }
 
 .chart-container {
-    margin: 10px;
+    width: 100%;
 }
 
 .header.container {
